--- a/manuscripts/23-tutorial-don-dags/24-aug-revised-causal-tutorial-env.qmd
+++ b/manuscripts/23-tutorial-don-dags/24-aug-revised-causal-tutorial-env.qmd
@@ -1,7 +1,7 @@
 ---
 title: "Causal Inference in Environmental Psychology"
 abstract: |
-  This chapter introduces causal inference within environmental psychology, emphasising the use of causal Directed Acyclic Graphs (causal DAGs) for identifying causal effects. It is structured into four sections: (1) a non-technical primer on causal inference, which explains its relevance to environmental psychology; (2) a tutorial on causal DAGs, which illustrates the how we may approach causal identification problems under assumptions encoded in graphs;  (3) practical illustrations that put causal DAGs to work, and (4) a section offering guidelines for causal inference in environmenal psychology. The main purpose of this chapter is to encourage environmental psychologists to create multiple causal diagram and conduct multiple analyses corresponding to each in settings wherever the assumptions required for causal inference are unclear or contested. This is important because our questions are nearly always causal, yet the data required to answer our questions seldom afford unambiguous answers.
+  This chapter introduces causal inference within environmental psychology, emphasising the use of causal Directed Acyclic Graphs (causal DAGs) for identifying causal effects. It is structured into four sections: (1) a non-technical primer on causal inference, which explains its relevance to environmental psychology; (2) a tutorial on causal DAGs, which illustrates the how we may approach causal identification problems under assumptions encoded in graphs;  (3) practical illustrations that put causal DAGs to work, and (4) a section offering guidelines for causal inference in environmental psychology. The primary goal of this chapter is to encourage environmental psychologists to create multiple causal diagrams and conduct corresponding analyses for each diagram. This is particularly important when the assumptions necessary for causal inference are unclear or debated. By doing so, researchers can better explore the range of possible causal relationships, which is crucial given that our questions often focus on causal effects, but the data available to answer these questions rarely provide clear-cut conclusions.
 authors: 
   - name: Joseph A Bulbulia
     orcid: 0000-0002-5861-2056
@@ -111,63 +111,56 @@ push_mods <-
 
 Psychological scientists are familiar with the expression 'correlation does not imply causation.' By ‘correlation,’ we mean a statistical measure that describes the strength and direction of a linear relationship between two variables. Our interests extend beyond simple correlations to more general measures of association. The goal of nearly every statistical method, from simple t-tests to advanced multilevel models, is to estimate magnitudes of association based on data. We obtain statistical estimates of association by measuring features of the world and computing degrees of association.
 
-What, then, is causation? In simple terms, causation refers to the relationship between events where one event (the cause) directly influences another (the effect). Every organism that has ever lived has had to address this question[@mancuso2018revolutionary]. The answers are not only encoded in our genes, forming the basis of our biological instincts, drives, and aversions, but they also underpin human cultures. Knowledge of cause and effect forms the foundation of human societies. Humans have spread to nearly every terrestrial habitat because we have learned to gather, store, and defend resources, construct shelters, divide and manage labour, reward cooperation, police anti-social behaviour, and generally coexist. At the core of every technology and norm is an understanding of causation.  How can we establish whether one event causes another? 
+What, then, is causation?  David Hume offers two definitions of causation in *Enquiries Concerning Human Understanding* (1751): 
 
-In the natural and human sciences, we say that $A$ causes $Y$ if acting on or manipulating $A$ would lead to a difference in $Y$ compared with a not acting on or manipulating $A$. It is evident that to establish causation requires something more than measuring features of the world and computing degrees of association. Suppose, credibly, that smoking causes lung cancer. Suppose further that smoking also reliably causes people to have yellow fingers. We might notice that people with yellow fingers develop lung cancer at a much higher rate than others. However, a public health policy that recommended vigorous hand-cleaning would remain ineffective in the fight against lung cancer. We say that smoking is a common cause of both finger staining and lung cancer. If we were to merely intervene on finger staining this would not affect lung cancer. However, if we were to substantially intervene on smoking, such an intervention would indeed lead to a change in lung cancer rates.  Smoking causes lung cancer; yellow fingers do not. 
+Hume's first definition is as follows:
 
+> We may define a cause to be an object followed by another, and where all the objects, similar to the first, are followed by objects similar to the second..." 
 
-<!-- Although randomised controlled trials (experiments), when performed correctly, ensure no unmeasured confounding, experiments face limitations of cost, practicality, ethics, and generalisability. Experiments are also subject to confounding biases [@hernan2017per; @montgomery2018; @bulbulia_2024_experiments]. Observational data, which are more readily available, offer alternatives -- provided that the causal inferences we draw are valid. Regrettably, common practices of analysing observational data invalidate causal inferences [@westreich2013; @robins1986; @hernan2023; @bulbulia2023a]. Converging advances in causal inference from biostatistics, economics, and computer science allow us to leverage observational data to better ask, and answer, causal questions [@hernan2023].  -->
+This definition is not relevant to our discussion. Hume's second definition is as follows: 
 
-This chapter provides and overview of these methods and their applications for environmental psychology.
+ "Or, in other words, where, **if the first object had not been, the second never would have existed**[@hume1902] (emphasis added).
 
-[**Part 1**](#section-part1) introduces the potential outcomes framework and the [**three fundamental assumptions**](#sec-three-fundamental-assumptions) necessary for causal inferences [@hernan2023]. Here, we discover that causal inference hinges on our ability to use data to compute contrasts between *counterfactual* outcomes [@westreich2012berkson; @hernan2017per; @westreich2015; @robins2008estimation].
+The key point to notice in Hume's second definition is that it relies on the concept of a counterfactual. To infer a causal effect requires contrasting two states of the world, one in which an event occurs and one in which it does not. It is Hume's counterfactual definition of causation that forms the basis of the concept of causation that has come to dominate the natural and social sciences.
 
-[**Part 2**](#section-part2) offers an introduction to causal diagrams or "Directed Acyclic Graphs (DAGs)" as tools for developing strategies for confounding control.
+In the natural and human sciences, we say that $A$ causes $Y$ if acting on or manipulating $A$ would lead to a difference in $Y$ compared with a not acting on or manipulating $A$. 
 
-[**Part 3**](#section-part3) presents seven worked examples that put causal diagrams to practice.
+It is evident from the counterfactual definition of causation we require something more than measuring features of the world to infer causality. We must be able to contrast two states of the world only one of which can occur at any given time. Put differently, causal inference requires us to imagine alternative states of the world, only one of which we can observe. 
 
-[**Part 4**](#section-part4) offers reporting guidelines. Here we advocate for reporting multiple causal diagrams and analysis wherever causal assumptions are uncertain or the timing of variables in one's data is unclear.
+<!-- 
+Suppose, credibly, that smoking causes lung cancer. Suppose further that smoking also reliably causes people to have yellow fingers. We might notice that people with yellow fingers develop lung cancer at a much higher rate than others. However, a public health policy that recommended vigorous hand-cleaning would remain ineffective in the fight against lung cancer. We say that smoking is a common cause of both finger staining and lung cancer. If we were to merely intervene on finger staining this would not affect lung cancer. However, if we were to substantially intervene on smoking, such an intervention would indeed lead to a change in lung cancer rates.  Smoking causes lung cancer; yellow fingers do not.  -->
 
+Although causality cannot be inferred from mere association, it is often the case that associations can be used to infer average causal effects within populations. 
 
-## Part 1: An Overview of the Potential Outcomes Framework for Causal Inference {#section-part1}
+[**Part 1**](#section-part1) introduces the counterfactual framework of causal inference, focussing on the [*three fundamental assumptions**](#sec-three-fundamental-assumptions) necessary to inference average causal effects  -- or 'average treatment effects' -- within specified populations. We build intuition for quantitatively estimating causal effects from data by focussing on randomised controlled experiments, where the assumptions required to infer average treatment effects are satisfied through enforced randomisation and treatment control  [@westreich2012berkson; @hernan2017per; @westreich2015; @robins2008estimation]. 
 
-The potential outcomes framework for causal inference originated in the work of Jerzy Neyman to evaluate the effectiveness of agricultural experiments [@neyman1923]. It was later extended by Harvard statistician Donald Rubin, who demonstrated the framework may also facilitate causal inferences in non-experimental settings [@rubin1976]. Jamie Robins further generalised this framework to assess confounding in complex scenarios involving multiple and time-varying treatments [@robins1986]. 
+[**Part 2**](#section-part2) offers an introduction to causal Directed Acyclic Graphs, more commonly known as causal DAGs. We show that within the counterfactual framework of causal inference, causal DAGs offer a powerful and intuitive language for addressing one of the assumptions necessary to identify average treatment effects from data, namely the assumption of conditional exchangeability (also known as the 'no unmeasured confounders' assumption).
 
-A fundamental principle in the potential outcomes framework is the concept of "counterfactual contrast" or "estimand." To quantify causal effects, one must compare the outcomes under different intervention or treatment scenarios. Notably, prior to any intervention, these scenarios are purely hypothetical. Post-intervention, only one scenario is actualised for each realised treatment, leaving the alternative as a non-observed counterfactual. For any individual unit to be treated, that only one of the two possible outcomes is realised underscores a critical property of causality: causality is **not directly observable** [@hume1902]. Causal inference, therefore, can only quantify causal effects by combining data with counterfactual simulation [@edwards2015; @bulbulia2023a]. The concept of a counterfactual data science --  may sound strange. However, anyone who has encountered a randomised experiment has encountered counterfactual data science.  Before building intuitions for causal inference from the familiar example of experiments, let's first build intuitions for the idea that causal quantities are never directly observed. 
+[**Part 3**](#section-part3) presents seven worked examples that put causal diagrams to practice. These examples will help applied researchers to understand how to construct causal diagrams to address their specific questions. These examples also reveal the importance of assumptions required to identify causal effects from observational data where randomisation and control is not generally possible. 
 
+[**Part 4**](#section-part4) offers practical reporting guidelines for environmental psychologists and other human scientists interested in inferring causal effects from observational data. A worry in causal inference in observational settings is that the assumptions required to identify causal effects can not generally be verified with data. Moreover, investigators may disagree about their assumptions. Wherever causal assumptions are uncertain or the timing of variables in one's data is unclear, we advocate for reporting multiple causal diagrams and analysis strategies. 
 
-#### The Fundamental Problem of Causal Inference: Causal Contrasts are Not Directly Observed
-
-Imagine you are at a pivotal juncture in your life. You have just completed your undergraduate studies and have been accepted into your dream Environmental Psychology program at the University of Canterbury. You are set to relocate to Christchurch, New Zealand. However, while making preparations, you receive a job offer from Acme Nuclear Fuels, a leader in renewable energy. Should you embark on graduate study or take the job?  The course your life will take under each decision would appear to differ — your lifestyle, income, social networks, relationships, and perhaps even sense of life purpose hang in the balance. Which choice aligns with your ideal future?
-
-Formally, let $D$ denote your decision, where $D = 1$ means attending graduate school and $D = 0$ means joining the workforce.  Let $Y$ denote your life outcome.  We use the symbol $|$ to denote conditionality such that the outcome. $Y(1)$ denotes your life outcome when $Y|D=1$; $Y(0)$ denotes your life outcome when $Y|D=0$. Your two potential outcomes under each path are described are given as $Y_{\text{you}}(1)$ and $Y_{\text{you}}(0)$. Conceptually, to quantify the *magnitude* of the effect of your decision on your life outcome, we must calculate the difference: 
-
-$$Y_{\text{you}}(1) - Y_{\text{you}}(0)$$  
-
-Yet, this difference cannot be calculated from data because when you choose one path, you obscure the other:
-
-$$
-(Y_{\text{you}}|D_{\text{you}} = 1) = Y_{\text{you}}(1) \quad \text{implies} \quad Y_{\text{you}}(0)|D_{\text{you}} = 1~ \text{is counterfactual}.
-$$
+The literature on causal inference and causal diagrams is large, and growing. We conclude by suggesting readings and resources for environmental psychologists and other scientists interested in learning more.
 
 
-This expression means: "The outcome we observe under option $D = 1$ can be measured. However, because option $D = 0$ is not realised, the outcome under option $D=0$ cannot be measured. Thus, the contrast between these two outcomes cannot be computed. At least one outcome remains purely counterfactual.
+## Part 1: An Overview of the Counterfactual Framework for Causal Inference {#section-part1}
 
-The same problem arises if you select $D = 0$. Then, the outcome under $D=1$ remains counterfactual. And so we cannot compute the contrast:
+### The Fundamental Problem of Causal Inference: Causal Contrasts are Not Directly Observed
 
-$$
-(Y_{\text{you}}|D_{\text{you}} = 0) = Y_{\text{you}}(0) \quad \text{implies} \quad Y_{\text{you}}(1)|D_{\text{you}} = 0~ \text{is counterfactual}.
-$$
+Imagine you face a major life decision: you can either start a graduate programme in Environmental Psychology at a University in New Zealand or accept a job offer from a leading renewable energy company. Your choice will shape your future, affecting your lifestyle, income, and social networks. Which option is best for you?
 
-Of course, you regularly make principled decisions about your life based on past experiences, instincts, and knowledge. Nevertheless, the *data* that you require to quantitatively compare life outcomes under one decision as opposed to the other is not available. Life, as it would have unfolded under the option you do not select, remains counterfactual -- it cannot be directly measured. A quantitative causal contrast here is not a matter of factual data science. This example, although contrived, perhaps resonates with similar crossroads you have encountered in your life. The dilemmas that you faced at these crossroads underscore what is known as "The fundamental problem of causal inference" [@rubin2005; @holland1986]: for any individual case, we cannot observe the potential outcomes that we require to quantify the magnitude of an individual causal contrast.
+The challenge here is that once you choose one path, you cannot observe how your life would have turned out on the other. If you go to graduate school, you will experience that outcome, but the outcome of taking the job will remain unknown—and vice versa. This is the 'fundamental problem of causal inference': you cannot observe both potential outcomes to quantify the causal effect of your decision [@rubin2005; @holland1986]. Another way of putting this problem is to say that inevitably half the data required to evaluate your life decision will inevitably remain missing. Whichever path you chose, the path not taken remains a "what if?" counterfactual that you can never measure. The fundamental problem of causal inference evident in this imaginary example is realised in every setting in which we might want to quantatively evaluate the difference between two different interventions on the world. Inevitable, the "full data" required to compute this contrast are missing. 
 
-The fundamental problem of causal inference never goes away. However, by collecting, organising, and aggregating data under certain assumptions, we can obtain valid quantitative causal contrasts from data for *average treatment effects*. To clarify these assumptions, we next consider how experiments attach magnitudes to missing counterfactual outcomes to obtain average treatment effects.
+Causal inference has its origins in the early 20th century with Jerzy Neyman’s foundational work on the potential outcomes framework, initially developed to understand the effects of agricultural experiments. Neyman realised that to understand the causal effect of a treatment, it was essential to compare the potential outcomes under different treatment conditions, even though only one of these outcomes could be observed for each unit. This framework laid the groundwork for modern causal inference, later extended by Donald Rubin, who formalised the potential outcomes approach into what is now known as the Neyman-Rubin Causal Model. James Robins further advanced the field by introducing structural nested models and marginal structural models, which are critical for addressing time-varying treatments and confounding. Judea Pearl contributed significantly by developing the framework of causal Directed Acyclic Graphs (DAGs) and formalising the relationship between graphical models and counterfactual reasoning, providing a new set of tools for causal analysis. We will review these tools in Part 2. Together, these and scholars have shaped the development of causal inference, which at its heart is a data driven method for quantitatively contrasting possible states of the world only one of which may be observed. This might sound like a strange idea, but anyone who has encountered a randomised experiment has encountered counterfactual data science.  We next intuitions for causal inference from the familiar example of experiments. 
+
 
 ### Causal inference in Experiments is a Missing Data Problem
 
-Let us transition from the topic of life decisions to an example of relevance to environmental psychology, namely, estimating the average causal effect of easy access to urban green spaces on subjective happiness, hereafter referred to as “happiness.” We assume this outcome is measurable and represent it with $Y$. 
+Consider an example relevant to environmental psychology. What is the causal effect of access to green spaces on subjective happiness. For simplicity we assume that happiness is measurable, and denote this state using $Y$, where $Y_i$ is the happiness of individual $i$. 
 
-For simplicity, we classify the intervention "ample access to green space" as a binary variable. Define $A = 1$ as "having ample access to green space" and $A = 0$ as "lacking ample access to green space." We assume these conditions are mutually exclusive. This simplification does not limit the generality of our conclusions; the points we make about experiments also apply to continuous treatments. It is crucial in causal inference to specify the population for whom we seek to evaluate causal effects, or the "target population." In this case, our target population is residents of New Zealand in the 2020s.
+For simplicity, let us assume that "ample access to green space" can be characterised as a binary variable. Define $A = 1$ as "having ample access to green space" and $A = 0$ as "lacking ample access to green space." We assume these conditions are mutually exclusive. This simplification does not limit the generality of our conclusions; the points we make about experiments also apply to continuous treatments. However, because causal effect estimation requires a contrast between predefined treatment conditions, it will be easier to evaluate how randomised controlled experiments estimate causal effects when we restrict attention to a binary treatment. It may seem obvious that to answer a causal question we must first ask it.  However, the practice of defining clear causal questions before attempting an analysis is rarely employed in psychological science outside of experimental work.  
+
+The target of causal inference may be stated as a contrast between potential outcomes under two or more treatment conditions. In this case, the target of inference could be characterised as a contrast between potential happiness states under the treatment "has ample access to green space" and the treatment "lacks ample access to green space". In stating such a question we must also explicitly define the target population for whom we seek to evaluate causal effects. In this case, let us imagine that our target population is all residents of New Zealand in the 2024.
 
 A preliminary causal question -- defined as a causal contrast or “estimand” might, therefore be:
 
@@ -180,11 +173,11 @@ As alluded to earlier, the first point to note in the context of causal inferenc
 
 $$
 \text{Average Treatment Effect} = \left(\underbrace{\underbrace{\mathbb{E}[Y(1)|A = 1]}_{\text{observed}} + \underbrace{\mathbb{E}[Y(1)|A = 0]}_{\text{unobserved}}}_{\text{treated}}\right) - \left(\underbrace{\underbrace{\mathbb{E}[Y(0)|A = 0]}_{\text{observed}} + \underbrace{\mathbb{E}[Y(0)|A = 1]}_{\text{unobserved}}}_{\text{untreated}}\right).
-$$
+$$++
 
 In this expression, $\mathbb{E}[Y(1)|A = 1]$ represents the average outcome when the treatment is given, which is observable. However, $\mathbb{E}[Y(1)|A = 0]$ represents the average outcome if the treatment had been given to those who were untreated, which remains unobservable. Similarly, the quantity $\mathbb{E}[Y(0)|A = 1]$ also remains unobservable.
 
-It is hopefully evident from this brief application of the potential outcomes framework to experiments that the fundamental problem of causal inference is an ever-present concern even in experiments. For each participant, it is impossible to determine the outcome they would have experienced under an alternative treatment condition. You cannot quantitatively describe the life you would have led had you chosen the job at Acme Nuclear Fuels instead of attending the University of Canterbury. Nor, if you lived your life in a leafy suburb, could you determine how happy you would have been if your life had been devoid of green space? 
+It is hopefully evident from this brief application of the potential outcomes framework to experiments that the fundamental problem of causal inference is an ever-present concern even in experiments. For each participant, it is impossible to determine the outcome they would have experienced under an alternative treatment condition. You cannot quantitatively describe the life you would have led had you chosen the job at Acme Nuclear Fuels instead of attending the University of Canterbury. Nor, if you lived your life in a leafy suburb, could you determine how happy you would have been if your life had been devoid of green space?  -->
 
 
 ### In Experiments, Random Treatment Assignment Balances Confounders Across Treatments
@@ -1096,6 +1089,13 @@ In [**Part 4**](#section-part4), we showed how investigators might create multip
 Although this discussion has focused on seven specific applications of causal diagrams, their applicability extends much further. The straightforward rules governing how variables become associated or disassociated through conditioning on nodes within basic structures enable the use of causal diagrams for addressing complex problems of time-varying confounding, for population restriction biases, and for measurement error (refer to @bulbulia2024swigstime; @bulbulia2024wierd). 
 
 We hope this chapter will inspire environmental psychologists to deepen their understanding of causal inference and incorporate causal diagrams into their research practices. The methodologies for distinguishing causation from correlation are well-established; powerful tools for causal inference are accessible. There is no longer any justification for reporting associations and speculating about causes. It is within your reach to quantify magnitudes of causality conditional on assumptions encoded in your causal graphs. 
+
+## Where to go from here
+
+The modern counterfactual framework for causal inference originated in the work of Jerzy Neyman to evaluate the effectiveness of agricultural experiments [@neyman1923]. It was later extended by Harvard statistician Donald Rubin, who demonstrated the framework may also facilitate causal inferences in non-experimental settings [@rubin1976]. Jamie Robins further generalised this framework to assess confounding in complex scenarios involving multiple and time-varying treatments [@robins1986]. 
+
+A fundamental principle in the potential outcomes framework is the concept of "counterfactual contrast" or "estimand." To quantify causal effects, one must compare the outcomes under different intervention or treatment scenarios. Notably, prior to any intervention, these scenarios are purely hypothetical. Post-intervention, only one scenario is actualised for each realised treatment, leaving the alternative as a non-observed counterfactual. For any individual unit to be treated, that only one of the two possible outcomes is realised underscores a critical property of causality: causality is **not directly observable** [@hume1902]. Causal inference, therefore, can only quantify causal effects by combining data with counterfactual simulation [@edwards2015; @bulbulia2023a]. The concept of a counterfactual data science --  may sound strange. However, anyone who has encountered a randomised experiment has encountered counterfactual data science.  Before building intuitions for causal inference from the familiar example of experiments, let's first build intuitions for the idea that causal quantities are never directly observed. 
+
 
 
 {{< pagebreak >}}
