--- a/manuscripts/24-accepted-ehs/part-1-dags/part-1-dags.qmd
+++ b/manuscripts/24-accepted-ehs/part-1-dags/part-1-dags.qmd
@@ -527,7 +527,7 @@ Pearl also proves a 'front-door adjustment' criterion, which is rarely used in p
 In the potential outcomes framework, we represent interventions by setting variables to specific levels, e.g., setting the treatment to a specific value $A = \tilde{a}$. We have noted that counterfactual outcomes are conceived as the outcomes that would occur if, perhaps contrary to fact, an individual's treatment was set to a specific level. We use the convention $Y_i(a)$ or equivalently $Y_i^{a}$ to denote the counterfactual or 'potential' outcome for individual $i$ when that individual's treatment is set to $A_i = a$. Because we assume individual treatments to be independent and identically distributed (i.i.d.), we drop the subscripts when describing the potential outcomes for multiple individuals under specific levels of treatment. Thus, we write $Y(a)$ or $Y^a$ as shorthand for:
 
 $$
-Y(a) \equiv \frac{1}{n} \sum_{i=1}^n Y_i(a)
+\mathbb{E}[Y(a)] \equiv \frac{1}{n} \sum_{i=1}^n Y_i(a)
 $$
 
 As noted above, we say that conditional exchangeability is satisfied if the potential outcomes are independent of the treatment assignment conditional on the measured covariates:
